Frankbelford/uatv1ba/force-app/main/default/objects/Driving_Settings__c/Driving_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Driving module.</description>
    <label>Driving Settings</label>
</CustomObject>