Frankbelford/uatv1ba/force-app/main/default/objects/Driving_Settings__c/fields/Disable_Break_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Break_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Break Trigger</label>
    <type>Checkbox</type>
</CustomField>