Frankbelford/uatv1ba/force-app/main/default/objects/Driving_Settings__c/fields/Disable_Week_Generation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Week_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Week Generation</label>
    <type>Checkbox</type>
</CustomField>