Frankbelford/uatv1ba/force-app/main/default/objects/Driving_Settings__c/fields/Editable_Driving_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Editable_Driving_Weeks__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Amount of weeks that can be edited backwards.</inlineHelpText>
    <label>Editable Driving Weeks</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>