Frankbelford/uatv1ba/force-app/main/default/objects/Driving_Settings__c/fields/Weeks_to_View__c.field-meta.xml
<CustomField>
    <fullName>Weeks_to_View__c</fullName>
    <defaultValue>26</defaultValue>
    <inlineHelpText>Number of weeks to view when loading a driver.</inlineHelpText>
    <label>Weeks to View</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>